about github 링크 추가

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 left: 0;
                 right: 0;
             }
+
+            ul {
+                display: flex;
+                gap: 15px;
+            }
+
             /* //header css */
 
             /* body css */
@@ -139,7 +145,8 @@
             </div>
             <div>
                 <ul>
-                    <li>LIKE</li>
+                    <li><a href="">LIKE</a></li>
+                    <li><a href="https://github.com/qjatjr1285/OrmiProject1">ABOUT</a></li>
                 </ul>
             </div>
         </div>
