--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>chat</title>
+        <title>ShoeBOX</title>
         <!-- tailwind css -->
         <script src="https://cdn.tailwindcss.com"></script>
         <!-- css -->
@@ -83,7 +83,7 @@
 
             <!-- footer -->
             <footer>
-                <p class="font-bold">Copyright © For a ShoeBOX(s) 2023</p>
+                <p class="copyright font-bold">Copyright © For a ShoeBOX(s) 2023</p>
                 <p class="">The first project of Ormi</p>
             </footer>
             <!-- //footer -->
