잘못 기입한 파일 이름 수정

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./src/js/tailwind.config.js"></script> 
-    <script src="./src/js/check_price_color.js"></script>
+    <script src="./src/js/checkPriceColor.js"></script>
     <script src="./src/js/loading.js"></script>
     <script src="./src/js/chat.js"></script>
     <!-- //js -->
