가격 단위 설명 추가

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
                         <div class="price mb-3">
                             <p class="text-sm mb-3">가격을 입력하세요.</p>
+                            <label class="text-sm">단위 : 만원</label>
                             <select class="w-full" id="select_price">
                                 <option class="w-8 h-8 text-black border border-slate-300" value="~10">~10</option>
                                 <option class="w-8 h-8 text-black border border-slate-300" value="10~30">10~30</option>
