about 페이지 생성 및 css, js 경로 수정

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <!-- tailwind css -->
         <script src="https://cdn.tailwindcss.com"></script>
         <!-- css -->
-        <link rel="stylesheet" href="./src/css/footer.css">
-        <link rel="stylesheet" href="./src/css/header.css">
-        <link rel="stylesheet" href="./src/css/result.css">
-        <link rel="stylesheet" href="./src/css/main.css">
+        <link rel="stylesheet" href="/src/css/footer.css">
+        <link rel="stylesheet" href="/src/css/header.css">
+        <link rel="stylesheet" href="/src/css/result.css">
+        <link rel="stylesheet" href="/src/css/main.css">
 
 </head>
     <body id="page_top">
@@ -22,7 +22,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="https://github.com/qjatjr1285/OrmiProject1">ABOUT</a></li>
+                    <!-- <li><a href="https://github.com/qjatjr1285/OrmiProject1">ABOUT</a></li> -->
+                    <li><a href="/src/pages/about.html">ABOUT</a></li>
                 </ul>
             </div>
         </div>
@@ -92,10 +93,10 @@
 
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./src/js/tailwind.config.js"></script> 
-    <script src="./src/js/checkPriceColor.js"></script>
-    <script src="./src/js/loading.js"></script>
-    <script src="./src/js/chat.js"></script>
+    <script src="/src/js/tailwind.config.js"></script> 
+    <script src="/src/js/checkPriceColor.js"></script>
+    <script src="/src/js/loading.js"></script>
+    <script src="/src/js/chat.js"></script>
     <!-- //js -->
     </body>
 </html>
