--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- header -->
         <div class="header">
             <div class="logo">
-                <a class="text-2xl font-bold" href="#page_top">ShoeBOX</a>
+                <a class="text-2xl font-bold" href="/index.html">ShoeBOX</a>
             </div>
             <div>
                 <ul>
